@@ -34,6 +34,8 @@ Features
 * Added `field_mappings` setting to the ESJsonEncoder allowing custom names for
   Heka message fields in ElasticSearch.
 
+* Added splitters to the reports displayed by Heka after SIGUSR1 signal.
+
 Bug Handling
 ------------
 
